David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/KloudGin_Account__c.field-meta.xml
<CustomField>
    <fullName>KloudGin_Account__c</fullName>
    <formula>OR(Account.KloudGin_Account__c = TRUE,  CreatedBy.Alias = &quot;klou&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KloudGin Account</label>
    <type>Checkbox</type>
</CustomField>