David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/KloudGin_WO__c.field-meta.xml
<CustomField>
    <fullName>KloudGin_WO__c</fullName>
    <externalId>true</externalId>
    <label>KloudGin WO#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>