David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Labor_Date_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Labor_Date_Time_In__c</fullName>
    <label>Labor Date/Time In</label>
    <type>DateTime</type>
</CustomField>