David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Labor_Date_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Labor_Date_Time_Out__c</fullName>
    <label>Labor Date/Time Out</label>
    <type>DateTime</type>
</CustomField>