David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Labor_Price__c.field-meta.xml
<CustomField>
    <fullName>Labor_Price__c</fullName>
    <defaultValue>195</defaultValue>
    <label>Labor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>