David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Labor_Travel_Table__c.field-meta.xml
<CustomField>
    <fullName>Labor_Travel_Table__c</fullName>
    <label>Labor/Travel Table</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>