David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Last_Completed_Work_Step__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Work_Step__c</fullName>
    <label>Last Completed Work Step</label>
    <length>50</length>
    <type>Text</type>
</CustomField>