David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Lead_Isolation_Test_Value__c.field-meta.xml
<CustomField>
    <fullName>Lead_Isolation_Test_Value__c</fullName>
    <label>Lead Isolation Test Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>