David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Lead_Leakage_P_F__c.field-meta.xml
<CustomField>
    <fullName>Lead_Leakage_P_F__c</fullName>
    <label>Lead Leakage P/F</label>
    <length>10</length>
    <type>Text</type>
</CustomField>