David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Leakage_Value_GND_Open_1__c.field-meta.xml
<CustomField>
    <fullName>Leakage_Value_GND_Open_1__c</fullName>
    <label>Leakage Value GND Open 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>