David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Line_Item_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Serial_Number__c</fullName>
    <formula>Contract_Line_Item__r.System_Serial_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Serial Number</label>
    <type>Text</type>
</CustomField>