David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Line_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Status__c</fullName>
    <description>This shows the Status of the Related Contract Line Item</description>
    <formula>Contract_Line_Item__r.Line_Item_Status__c</formula>
    <label>Line Item Status</label>
    <type>Text</type>
</CustomField>