David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Line_Item_System__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_System__c</fullName>
    <formula>Contract_Line_Item__r.Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item System</label>
    <type>Text</type>
</CustomField>