David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Line_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Line_Voltage__c</fullName>
    <label>Line Voltage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>