David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Loaner_Needed__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Needed__c</fullName>
    <label>Loaner Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>w/ Loaner</fullName>
            </value>
            <value>
                <fullName>No Loaner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>