David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Location_of_Equipment_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Equipment_Address__c</fullName>
    <formula>Contract_Line_Item__r.Location_of_Equipment_Address__c</formula>
    <label>Location of Equipment Address</label>
    <type>Text</type>
</CustomField>