David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Maximum_Drive_Strength__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Drive_Strength__c</fullName>
    <label>Maximum Drive Strength</label>
    <type>TextArea</type>
</CustomField>