David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Modality__c.field-meta.xml
<CustomField>
    <fullName>Modality__c</fullName>
    <formula>CASE(Contract_Line_Item__r.Product_Family__c,
    &quot;Ultrasound System&quot;,  &quot;Ultrasound&quot;,
    &quot;Ultrasound Probe&quot;,   &quot;Ultrasound&quot;,
    &quot;Part&quot;,               &quot;Part&quot;,
    &quot;Bone Density&quot;,       &quot;Bone Density&quot;,
    &quot;Bone Density Scanner&quot;,&quot;Bone Density&quot;,
    &quot;C-Arm&quot;,              &quot;X-Ray&quot;,
    &quot;CV&quot;,                 &quot;X-Ray&quot;,
    &quot;Fluoroscopy&quot;,        &quot;X-Ray&quot;,
    &quot;X-Ray&quot;,              &quot;X-Ray&quot;,
    &quot;Dental&quot;,             &quot;X-Ray&quot;,
    &quot;Mammo&quot;,              &quot;X-Ray&quot;,
    &quot;Mammography&quot;,        &quot;X-Ray&quot;,
    &quot;Portable&quot;,           &quot;X-Ray&quot;,
    &quot;CT&quot;,                 &quot;CT&quot;,
    &quot;MRI&quot;,                &quot;MRI&quot;,
    &quot;Injector&quot;,           &quot;Injector&quot;,
    &quot;Iradimed&quot;,           &quot;Iradimed&quot;,
    &quot;MI - Gamma Camera&quot;,  &quot;MI - Gamma Camera&quot;,
    &quot;CR Reader&quot;,          &quot;CR Reader&quot;,
    &quot;PET&quot;,                &quot;PET&quot;,
    &quot;Medtron&quot;,            &quot;Medtron&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modality</label>
    <type>Text</type>
</CustomField>