David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Nebulizer_FlowRate_RPM_Max__c.field-meta.xml
<CustomField>
    <fullName>Nebulizer_FlowRate_RPM_Max__c</fullName>
    <label>Nebulizer FlowRate_RPM_Max</label>
    <type>TextArea</type>
</CustomField>