David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Needs_Paid__c.field-meta.xml
<CustomField>
    <fullName>Needs_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Paid</label>
    <type>Checkbox</type>
</CustomField>