David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Next_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Service_Date__c</fullName>
    <inlineHelpText>SERVICE DUE DATE: Only amend on approval or if more than two quarters away</inlineHelpText>
    <label>Next Service Date</label>
    <type>Date</type>
</CustomField>