David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/No_Brightness_Transitions_3__c.field-meta.xml
<CustomField>
    <fullName>No_Brightness_Transitions_3__c</fullName>
    <label>No Brightness Transitions 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>