David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/No_Vertical_or_Radical_Shadows_1__c.field-meta.xml
<CustomField>
    <fullName>No_Vertical_or_Radical_Shadows_1__c</fullName>
    <label>No Vertical or Radical Shadows 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>