David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Normal_Polarity_Test_Ground_Closed__c.field-meta.xml
<CustomField>
    <fullName>Normal_Polarity_Test_Ground_Closed__c</fullName>
    <label>Normal Polarity Test Ground Closed</label>
    <length>10</length>
    <type>Text</type>
</CustomField>