David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Note_to_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Note_to_Engineer__c</fullName>
    <label>Note to Engineer</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>