David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Notes_for_Sales_Opps_Probe_3__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Sales_Opps_Probe_3__c</fullName>
    <label>Notes for Sales Opps - Probe 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>