David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Number_of_Site_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Site_Visits__c</fullName>
    <inlineHelpText>The count of Service Appointments have their &quot;Appointment Type&quot; set to &quot;Site Visit&quot;</inlineHelpText>
    <label>Number of Site Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>