David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Number_of_Tech_Support_Calls__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tech_Support_Calls__c</fullName>
    <inlineHelpText>Count of Service Appointments with their &quot;Appointment Type&quot; set to &quot;Tech Support Call&quot;</inlineHelpText>
    <label>Number of Tech Support Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>