David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Operating_Env_meets_Trophon_Specs__c.field-meta.xml
<CustomField>
    <fullName>Operating_Env_meets_Trophon_Specs__c</fullName>
    <label>Operating Env. meets Trophon Specs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trophon_Form_Options</valueSetName>
    </valueSet>
</CustomField>