David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Operating_Env_meets_Trophon_Specs_Com__c.field-meta.xml
<CustomField>
    <fullName>Operating_Env_meets_Trophon_Specs_Com__c</fullName>
    <label>Operating Env. meets Trophon Specs Com</label>
    <type>TextArea</type>
</CustomField>