David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Opportunity_Rep__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Rep__c</fullName>
    <formula>Opportunity__r.Rep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Rep</label>
    <type>Text</type>
</CustomField>