David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Out_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Hours__c</fullName>
    <label>Out of Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>