David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Overdue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Reason__c</fullName>
    <label>Overdue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Customer Response</fullName>
            </value>
            <value>
                <fullName>Unable to Locate System</fullName>
            </value>
            <value>
                <fullName>Incorrect Customer Contact Details</fullName>
            </value>
            <value>
                <fullName>Customer Unable to Provide Service Date</fullName>
            </value>
            <value>
                <fullName>System In Use on Scheduled Date</fullName>
            </value>
            <value>
                <fullName>Contract Delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>