David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Overdue_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Reason_Notes__c</fullName>
    <label>Overdue Reason Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>