David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Paperwork_time_frame__c.field-meta.xml
<CustomField>
    <fullName>Paperwork_time_frame__c</fullName>
    <formula>24 * (EndDate -  Service_Completed_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paperwork time frame</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>