David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Part_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Part_Cost_Total__c</fullName>
    <label>Part Cost Total</label>
    <summarizedField>WorkOrderLineItem.Part_Cost__c</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>