David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Part_Description_1__c.field-meta.xml
<CustomField>
    <fullName>Part_Description_1__c</fullName>
    <label>Part Description 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>