David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Part_Installed_Price_1__c.field-meta.xml
<CustomField>
    <fullName>Part_Installed_Price_1__c</fullName>
    <label>Part Installed Price 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>