David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Part_Installed_Quantity_1__c.field-meta.xml
<CustomField>
    <fullName>Part_Installed_Quantity_1__c</fullName>
    <label>Part Installed Quantity 1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>