David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Part_Installed_Serial_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Part_Installed_Serial_Number_2__c</fullName>
    <label>Part Installed Serial Number 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>