David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Part_Removed_Quantity_2__c.field-meta.xml
<CustomField>
    <fullName>Part_Removed_Quantity_2__c</fullName>
    <label>Part Removed Quantity 2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>