David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Part_Requested_3__c.field-meta.xml
<CustomField>
    <fullName>Part_Requested_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part Requested 3</label>
    <type>Checkbox</type>
</CustomField>