David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Parts_Probe_Table__c.field-meta.xml
<CustomField>
    <fullName>Parts_Probe_Table__c</fullName>
    <label>Parts/Probe Table</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>