David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Parts_required__c.field-meta.xml
<CustomField>
    <fullName>Parts_required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are parts needed to complete the work order?</inlineHelpText>
    <label>Parts required?</label>
    <type>Checkbox</type>
</CustomField>