David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Parts_Sales_Value__c.field-meta.xml
<CustomField>
    <fullName>Parts_Sales_Value__c</fullName>
    <label>Parts Sales Value</label>
    <summarizedField>WorkOrderLineItem.UnitPrice</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>