David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Parts_Total__c.field-meta.xml
<CustomField>
    <fullName>Parts_Total__c</fullName>
    <label>Parts Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>