David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Patient_Impact__c.field-meta.xml
<CustomField>
    <fullName>Patient_Impact__c</fullName>
    <label>Patient Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Re-Scan Required</fullName>
            </value>
            <value>
                <fullName>Injury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>