David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Perform_hard_drive_maintenance__c.field-meta.xml
<CustomField>
    <fullName>Perform_hard_drive_maintenance__c</fullName>
    <label>Perform hard drive maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>