David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Perform_self_test__c.field-meta.xml
<CustomField>
    <fullName>Perform_self_test__c</fullName>
    <label>Perform self-test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trophon_Form_Options</valueSetName>
    </valueSet>
</CustomField>