David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Perform_self_test_Com__c.field-meta.xml
<CustomField>
    <fullName>Perform_self_test_Com__c</fullName>
    <label>Perform self test Com</label>
    <type>TextArea</type>
</CustomField>