David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Peripheral_Model_1__c.field-meta.xml
<CustomField>
    <fullName>Peripheral_Model_1__c</fullName>
    <label>Peripheral Model 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>