David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Peripheral_PF_2__c.field-meta.xml
<CustomField>
    <fullName>Peripheral_PF_2__c</fullName>
    <label>Peripheral P/F 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>