David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Peripheral_SN_2__c.field-meta.xml
<CustomField>
    <fullName>Peripheral_SN_2__c</fullName>
    <label>Peripheral SN 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>