David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Person_Requesting_WO_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Requesting_WO_Email__c</fullName>
    <label>Person Requesting WO Email</label>
    <type>Email</type>
</CustomField>