David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Picked_Up_By__c.field-meta.xml
<CustomField>
    <fullName>Picked_Up_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>03/17/2026 (BW) - Who in operations picked up this work order.</description>
    <label>Picked Up By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>