David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Picked_Up_by_Operations__c.field-meta.xml
<CustomField>
    <fullName>Picked_Up_by_Operations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Picked Up by Operations</label>
    <type>Checkbox</type>
</CustomField>