David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Power_Cord_Resistance__c.field-meta.xml
<CustomField>
    <fullName>Power_Cord_Resistance__c</fullName>
    <label>Power Cord Resistance</label>
    <length>10</length>
    <type>Text</type>
</CustomField>