David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/PPM_Overdue__c.field-meta.xml
<CustomField>
    <fullName>PPM_Overdue__c</fullName>
    <formula>OR(

/* Case 1: Not completed and month has passed */

AND(
    ISBLANK(Service_Completed_Date__c),
    DATE(
        YEAR(TODAY()),
        MONTH(TODAY()),
        1
    ) &gt;
    DATE(
        YEAR(Next_Service_Date__c),
        MONTH(Next_Service_Date__c),
        1
    )
),

/* Case 2: Completed but in a later month */

AND(
    NOT(ISBLANK(Service_Completed_Date__c)),
    DATE(
        YEAR(DATEVALUE(Service_Completed_Date__c)),
        MONTH(DATEVALUE(Service_Completed_Date__c)),
        1
    ) &gt;
    DATE(
        YEAR(Next_Service_Date__c),
        MONTH(Next_Service_Date__c),
        1
    )
)

)</formula>
    <label>PPM Overdue</label>
    <type>Checkbox</type>
</CustomField>