David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Preliminary_Comments_and_Findings__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Comments_and_Findings__c</fullName>
    <label>Preliminary Comments and Findings</label>
    <type>TextArea</type>
</CustomField>