David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Preset_Backup_Done__c.field-meta.xml
<CustomField>
    <fullName>Preset_Backup_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preset Backup Done?</label>
    <type>Checkbox</type>
</CustomField>