David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Probe_Requested_2__c.field-meta.xml
<CustomField>
    <fullName>Probe_Requested_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Probe Requested 2</label>
    <type>Checkbox</type>
</CustomField>